--- a/style/style.css
+++ b/style/style.css
@@ -525,3 +525,16 @@ body {
 	-moz-transform:translate(-50%, 0%);
 	-ms-transform:translate(-50%, 0%);
 }
+#sideHighScore {
+	position: fixed;
+	top: 50px;
+	right: 20px;
+	background-color: rgba(0, 0, 0, 0.7);
+	color: #ecf0f1;
+	padding: 10px 15px;
+	border-radius: 10px;
+	font-size: 1.5rem;
+	font-family: 'Exo', sans-serif;
+	z-index: 9999;
+	box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
