--- a/style/style.css
+++ b/style/style.css
@@ -538,3 +538,17 @@ body {
 	z-index: 9999;
 	box-shadow: 0 0 10px rgba(0,0,0,0.3);
 }
+.ranking {
+				background-color: forestgreen;
+				color: white;
+				width: 180px;
+				padding: 10px;
+				font-family: sans-serif;
+				font-size: 14px;
+				position: absolute;
+				top: 10px;
+				right: 10px;
+				border-radius: 5px;
+				z-index: 999;
+}
+		
