--- a/style/style.css
+++ b/style/style.css
@@ -552,15 +552,21 @@ body {
 				z-index: 999;
 }
 .install-app-btn-container {
-	display: none;
-  }
-  .install-app-btn {
-	padding: 5px 10px;
-	background-color: #1434eb;
-	color: white;
-	font-weight: bold;
-	font-size: 13px;
-	border-radius: 6px;
-  }
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+}
+
+.install-app-btn {
+  padding: 5px 10px;
+  background-color: #1434eb;
+  color: white;
+  font-weight: bold;
+  font-size: 13px;
+  border-radius: 6px;
+}
+
   
 		
